--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -1,9 +1,24 @@
 /* Here we can set styles for this lab page that we don't want to effect others pages */
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
-.minor-section {
+  h1{
+    color: darkcyan;
+    font-size: 150%;
+    text-align: center;
+  }
+
+  p{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-indent: 20px;
+    margin-left: 10px;
+  }
+
+  #content {
+    background-color: #646161;
+    width: 500px;
+    min-height: 300px;
     padding: 10px;
-    margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #DDD8C4;
+    margin: 10px;
+    border: solid 1px #444444;
+    font-size: 20px;
   }
